--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ propcache==0.4.1
 proto-plus==1.26.1
 protobuf==6.33.2
 psutil==7.1.3
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycodestyle==2.14.0
