--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -40,10 +40,9 @@ jobs:
       - name: Configure DVC remote (optional)
         if: ${{ env.DVC_REMOTE_URL != '' }}
         run: |
-          dvc remote modify origin url "$DVC_REMOTE_URL"
-          # Add credentials if needed:
-          # dvc remote modify origin access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          # dvc remote modify origin secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          dvc remote add -d origin  "$DVC_REMOTE_URL"
+          dvc remote modify origin access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          dvc remote modify origin secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
 
       - name: Pull model from DVC
         run: |
